--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,7 @@
   <a class="nav-link" routerLink="/">Home</a>
   <a class="nav-link" routerLink="/budget/requirements">Requirement</a>
 </nav>
-<router-outlet></router-outlet>
+
+<main class="container">
+  <router-outlet></router-outlet>
+</main>
